# RoboticsFramework

./: .gitignore  CMakeLists.txt
include/: CollisionChecker.hpp
include/geometry/: Cuboid.hpp
include/math/: AxisAngle.hpp  Math.hpp  Pose.hpp  Quaternion.hpp  Vector3d.hpp
include/simulation/: BoxPoseSimulation.hpp  GlutSimulation.hpp  GlutSimulationWrapper.hpp
robotics/geometry/: CMakeLists.txt  CollisionChecker.cpp  CollisionChecker.hpp  Convert.cpp  Convert.hpp  Cuboid.cpp  Cuboid.hpp  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp  Vertex3d.cpp  Vertex3d.hpp
robotics/math/: AxisAngle.cpp  AxisAngle.hpp  CMakeLists.txt  Math.hpp  Pose.hpp  Quaternion.cpp  Quaternion.hpp  RotationMatrix.cpp  RotationMatrix.hpp  Transform3d.cpp  Transform3d.hpp  Vector3d.cpp  Vector3d.hpp
robotics/math/test/: Quaternion_test.cpp  Vector3d_test.cpp
robotics/simulation/: BoxCollisionSimulation.cpp  BoxCollisionSimulation.hpp  BoxPoseSimulation.cpp  BoxPoseSimulation.hpp  CMakeLists.txt  GlutSimulation.cpp  GlutSimulation.hpp  GlutSimulationWrapper.cpp  GlutSimulationWrapper.hpp
src/: CollisionChecker.cpp
src/geometry/: Cuboid.cpp
src/math/: AxisAngle.cpp  Pose.cpp  Quaternion.cpp  Vector3d.cpp
src/simulation/: BoxPoseSimulation.cpp  GlutSimulation.cpp  GlutSimulationWrapper.cpp
test/: collision_test.cpp  glutBox_test.cpp  glutSimulation_test.cpp  glut_wth_test.cpp  pose_box_test.cpp
